URL Shortening: abort with 404 when url not found
